tests/baselines/reference/arrowFunctionReturnTypeErrorSpan.errors.txt
arrowFunctionReturnTypeErrorSpan.ts(2,7): error TS2451: Cannot redeclare block-scoped variable 'a'.
arrowFunctionReturnTypeErrorSpan.ts(3,3): error TS2322: Type 'string' is not assignable to type 'number'.
arrowFunctionReturnTypeErrorSpan.ts(6,7): error TS2451: Cannot redeclare block-scoped variable 'a'.
arrowFunctionReturnTypeErrorSpan.ts(7,10): error TS2304: Cannot find name 'missing'.
arrowFunctionReturnTypeErrorSpan.ts(11,15): error TS2322: Type 'string' is not assignable to type 'number'.
arrowFunctionReturnTypeErrorSpan.ts(14,15): error TS2322: Type 'string' is not assignable to type 'number'.
arrowFunctionReturnTypeErrorSpan.ts(16,25): error TS2304: Cannot find name 'missing'.


==== arrowFunctionReturnTypeErrorSpan.ts (7 errors) ====
    // block body
    const a = (): number => {
          ~
!!! error TS2451: Cannot redeclare block-scoped variable 'a'.
      return "foo";
      ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    };
    
    const a = (): number => {
          ~
!!! error TS2451: Cannot redeclare block-scoped variable 'a'.
      return missing;
             ~~~~~~~
!!! error TS2304: Cannot find name 'missing'.
    };
    
    // expression body
    const b = (): number => "foo";
                  ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    type F<T> = T;
    const c = (): F<number> => "foo";
                  ~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    const d = (): number => missing;
                            ~~~~~~~
!!! error TS2304: Cannot find name 'missing'.
    